# orthanc-builder

./: .gitignore  .gitmodules  Jenkinsfile  README-dockerhub-pro.md  README-dockerhub.md  README.md  bash-helpers.sh  build-macos-branch.sh  build-macos-package.sh  build-matrix.json  build-osx-branch.sh  build-osx-package.sh  build-stone-wasm.sh  build-volview-dist.sh  build-win-branch.sh  build.sh  buildOrthancAndPlugins.py  buildOrthancOSX.sh  buildOrthancZipPackage.py  ciBuild.sh  ciBuildOrthancBuilderImage.sh  ciBuildOrthancOSX.sh  ciBuildOrthancWin.ps1  ciBuildOsimisDockerImage.sh  ciBuildOsimisOrthancDockerImage.sh  ciBuildOsimisOrthancProDockerImage.sh  createPythonVenv.sh  local-build.sh  new-build.ps1  release-notes-docker-images.md  release-notes-docker-images.txt  release-notes.txt  release-procedure.txt  requirements.txt
.github/: buildkitd.toml
.github/workflows/: all-builds.yml  build-all-dockers.yml  build-and-release.yml  build-docker.yml  build-macos-binaries.yml  build-macos-package.yml  build-osx-binaries.yml  build-osx-package.yml  build-stone-wasm.yml  build-volview-dist.yml  build-win-binaries.yml  build-windows-installer.yml  build.yml  matrix_includes.json  nightly-branch-builds.yml  nightly-osx-branch-builds.yml  nightly-unstable-packages.yml  pre-build.yml  run-docker-integ-tests.yml
Installer/: CreateInstaller.py  Installer.innosetup  Orthanc-1.2.0-32.json  Orthanc-1.2.0-64.json
Installer/Configuration/: PatchDefaultConfiguration.cpp  WindowsService.cpp
Installer/Resources/: GenerateIcon.py  README.txt  webviewer.json
UCLouvain/: CreateMacOSPackage.py  Toolbox.py
WindowsInstaller/: .gitignore  AppProcessMessages.iss  CreateInstaller.py  Dockerfile  Installer-Osimis.innosetup  Installer.innosetup  NOTES.txt  Orthanc-1.2.0-32.json  Orthanc-1.2.0-64.json  Orthanc-32.json  Orthanc-64.json  ServiceControl.iss  ciBuildWindowsInstaller.sh
WindowsInstaller/Configuration/: CMakeLists.txt  PatchDefaultConfiguration.cpp  Toolbox.cpp  Toolbox.h  WindowsService.cpp
WindowsInstaller/Resources/: License.rtf  README.txt  advanced-storage.json  aws-s3.json  azure.json  delayed-deletion.json  dicomweb.json  housekeeper.json  indexer.json  mysql.json  odbc.json  orthanc-explorer-2.json  osimis-webviewer.json  pixels-masker.json  postgresql.json  stone-webviewer.json  tcia.json  transfers.json  webviewer.json  worklists.json
docker/: Dockerfile  Dockerfile-pro  README-dockerhub.md  SBOM.txt  buildOsimisDockerImage.sh  linux-local-build.sh  mssql.json  orthanc.json  postgresql.json  serve-folders.json  worklists.json
docker/integration-tests/: .dockerignore  .gitignore  docker-compose.cget.yml  docker-compose.dicomweb-with-gdcm.yml  docker-compose.dicomweb.yml  docker-compose.ingest-transcoding.yml  docker-compose.mysql.yml  docker-compose.odbc-mysql.yml  docker-compose.odbc-postgres.yml  docker-compose.odbc-sql-server.yml  docker-compose.odbc-sqlite.yml  docker-compose.postgres-dicomweb.yml  docker-compose.postgres-read-committed.yml  docker-compose.postgres-recycling.yml  docker-compose.postgres-serializable.yml  docker-compose.postgres.yml  docker-compose.s3.yml  docker-compose.scu-transcoding.yml  docker-compose.sqlite-compression.yml  docker-compose.sqlite-recycling.yml  docker-compose.sqlite.yml  docker-compose.tls-check-client.yml  docker-compose.tls-no-check-client.yml  docker-compose.transfers.yml  docker-compose.webdav.yml  docker-compose.worklists.yml  docker-compose.wsi.yml  run-integration-tests.sh
docker/orthanc-builder-all/: .gitignore  Dockerfile  configurator.py  env-var-legacy.json  env-var-non-standards.json  generateConfiguration.py  helpers.py  plugins-def.json  startOrthanc.py  test_current.py  test_legacy.py
docker/orthanc-builder-base/: Dockerfile
docker/orthanc-dyn-builder/: Dockerfile
docker/orthanc-old/: docker-entrypoint.sh
github-mirrors/: mirror-helpers.sh  sync-all.sh
orthancBuildResources/: configOSX.json  configWin.json  readmeMacOS.txt  readmeOSX.txt  readmeWin.txt  startOrthanc.bat  startOrthanc.command
(+105 files in other folders)
